Literaturnachweise fuer den Abschnitt Domain Driven Design wurde hinzugefuegt

--- a/sections/Theory/microservices.tex
+++ b/sections/Theory/microservices.tex
@@ -42,23 +42,27 @@ Um nun folglich eine Microservicesarchitektur umzusetzen, muss zum einem die Anw
 
 \subsubsection{Domain Driven Design}
 \label{sec:ddd}
-% Todo Quellen einfügen, Marcel korrektur lesen lassen
 
-Wie aus dem \cref{sec:conway} hervorgeht, ist es das Ziel der Microservicesarchitektur möchglichst autonome Teams zu etablieren und unnötige Absprachen zu reduzieren. Um dies zu erreichen und gleichzeitig die hohe Kohärenz bei geringer Kopplung zu besitzen, bauen Microservices auf der Idee des Domain Driven Designs auf, welche von Eric Evans in seinem gleichnamigen Buch publiziert wurde. Es handelt sich dabei um eine Herangehensweise bzw. Denkweise zur Modellierung komplexer Systeme, bei der, dass Gesamtsystem anhand der einzelnen Geschäftsprozesse geteilt wird.
+Wie aus dem \cref{sec:conway} hervorgeht, ist es das Ziel der Microservicesarchitektur möchglichst autonome Teams zu etablieren und unnötige Absprachen zu reduzieren. Um dies zu erreichen und gleichzeitig die hohe Kohärenz bei geringer Kopplung zu besitzen, bauen Microservices auf der Idee des Domain Driven Designs auf, welche von Eric Evans in seinem gleichnamigen Buch publiziert wurde \parencite[vgl.][Kap. 2.4]{newman_monolith_2019}. Es handelt sich dabei um eine Herangehensweise bzw. Denkweise zur Modellierung komplexer Systeme, bei der, dass Gesamtsystem anhand der einzelnen Geschäftsprozesse geteilt wird \parencite[vgl.][S. xix ff.]{evans_domain-driven_2003}.
 
-Domain Driven Design ist dabei nicht exklusiv für Microserivces gedacht, sondern beschreibt vielmehr den Ansatz Softwareentwicklung und Geschäftsfunktion zu vereinen, welche in verschiedenen Architekturen umgesetzt werden kann. Nichtsdestoweniger ist Domain Driven Design wesentlich für die Bestimmung der Grenzen eines Services und somit entscheidet für Microservices.
+Domain Driven Design ist dabei nicht exklusiv für Microserivces gedacht, sondern beschreibt vielmehr den Ansatz Softwareentwicklung und Geschäftsfunktion zu vereinen, welche in verschiedenen Architekturen umgesetzt werden kann. Nichtsdestoweniger ist Domain Driven Design wesentlich für die Bestimmung der Grenzen eines Services und somit entscheidet für Microservices \parencite[vgl.][Kap. 4.3]{wolff_microservices_2018}.
 
-Ein Hauptbestandteil des Domain Driven Designs ist der Gedanke des Kontextes bzw. der Kontextgrenze. Eine Kontextgrenze ist dabei die Abgrenzung eines logischen Abschnittes (Kontext) innerhalb eines Unternehmens. Dadurch wird der Ansatz verfolgt, dass einzelne Funktionen und Inhalte nur innerhalb eines gewissen Bereiches Sinn ergeben. So ist zum Beispiel in einem E-Commerce Unternehmen bei der Bestellung von Ware die Anzahl, die Größe und das Gewicht entscheidend, während bei der Buchung Preis und Steuersatz wichtig sind. Des Weiteren kann je nach Kontext ein Begriff, wie Preis, unterschiedliche Bedeutungen haben. So bezieht sich dieser beim Bestellen von neuer Ware auf den Einkaufspreis, während er beim Verkaufen den Verkaufspreis meint. Somit hängt die Bedeutung des Wortes Preis vom dem zu lösenden Geschäftsprozess ab, in diesem Fall Bestellen von Ware oder Verkaufen von Produkten. Dies ist zwar nur ein einzelnes Beispiel, lässt sich jedoch auf Weitere übertragen. Demnach empfiehlt Domain Driven Design  Kontextgrenzen so zu setzen, dass sie ein Geschäftsprozess umschließen und idealerweise genau ein spezifisches Problem lösen.
+Ein Hauptbestandteil des Domain Driven Designs ist der Gedanke des Kontextes bzw. der Kontextgrenze \parencite[vgl.][]{fowler_boundedContext_2014}. Eine Kontextgrenze ist dabei die Abgrenzung eines logischen Abschnittes (Kontext) innerhalb eines Unternehmens. Dadurch wird der Ansatz verfolgt, dass einzelne Funktionen und Inhalte nur innerhalb eines gewissen Bereiches Sinn ergeben. So ist zum Beispiel in einem E-Commerce Unternehmen bei der Bestellung von Ware die Anzahl, die Größe und das Gewicht entscheidend, während bei der Buchung Preis und Steuersatz wichtig sind. Des Weiteren kann je nach Kontext ein Begriff, wie Preis, unterschiedliche Bedeutungen haben \parencite[vgl.][S. 24 ff.]{evans_domain-driven_2003}. So bezieht sich dieser beim Bestellen von neuer Ware auf den Einkaufspreis, während er beim Verkaufen den Verkaufspreis meint. Somit hängt die Bedeutung des Wortes Preis vom dem zu lösenden Geschäftsprozess ab, in diesem Fall Bestellen von Ware oder Verkaufen von Produkten. Dies ist zwar nur ein einzelnes Beispiel, lässt sich jedoch auf Weitere übertragen. Demnach empfiehlt Domain Driven Design Kontextgrenzen so zu setzen, dass sie ein Geschäftsprozess umschließen und idealerweise genau ein spezifisches Problem lösen \parencite[vgl.][Kap. 4.3]{wolff_microservices_2018}.
 
 % Todo add Beschreibung von Wolff nachdem sich Microservices an den single responsebility richtet.
 
 Wie eingangs beschrieben, handelt es sich jedoch bei Domain Driven Design nur um eine Herangehensweise und nicht um klare Regeln. Daher liegt es im Ermessen jedes Unternehmens die Granularität der Kontexte zu setzen.
 
-Der Fokus auf ein spezifische Problemstellung, ermöglicht jedoch eine einheitliche Sprache innerhalb eines Kontexts einzufügen, sowie eine enge Verbindung zwischen Geschäftslogik und technische Entwicklung zu erzeugen. Somit vertritt Domain Driven Design den Ansatz, dass technische Modelle und Prozessbeschreibungen die gleiche Terminologie besitzen. Dadurch soll die Kommunikation zwischen Fachexperten und Softwareentwickler gestärkt werden.
+Der Fokus auf ein spezifische Problemstellung, ermöglicht jedoch eine einheitliche Sprache innerhalb eines Kontexts einzufügen, sowie eine enge Verbindung zwischen Geschäftslogik und technische Entwicklung zu erzeugen. Somit vertritt Domain Driven Design den Ansatz, dass technische Modelle und Prozessbeschreibungen die gleiche Terminologie besitzen \parencite[vgl.][S. 24 ff.]{evans_domain-driven_2003}. Dadurch soll die Kommunikation zwischen Fachexperten und Softwareentwickler gestärkt werden.
 % Todo ggf. anderes Wort für Fachexperte
 
-Konkret für die Einteilung von Microservices bedeutet dies, dass ein Microservices ein Kontext abbildet, welche an ein Geschäftsprozess orientiert ist. Diese Eigenschaft deckt sich mit der von Sam Newman beschriebenden Definition, dass Microservices \textit{\enquote{um eine Geschäftsdomäne herum modelliert sind}} (\cref{sec:microservices}). Des Weiteren fordert Domain Driven Design, dass ein Team, welches für ein Service verantwortlich ist, auch Personen aus der Geschäftsabteilung hat und dass das Modell, durch ein fachlich diverses Team entsteht.
+Konkret für die Einteilung von Microservices bedeutet dies, dass ein Microservices ein Kontext abbildet, welche an ein Geschäftsprozess orientiert ist \parencites[vgl.][Kap. 4.3]{wolff_microservices_2018}[vgl.][Kap. 4]{newman_monolith_2019}.
+
+Diese Eigenschaft deckt sich mit der von Sam Newman beschriebenden Definition, dass Microservices \textit{\enquote{um eine Geschäftsdomäne herum modelliert sind}} (\cref{sec:microservices}). Des Weiteren fordert Domain Driven Design, dass ein Team, welches für ein Service verantwortlich ist, auch Personen aus der Geschäftsabteilung hat und dass das Modell, durch ein fachlich diverses Team entsteht \parencite[vgl.][S. 32 ff.]{evans_domain-driven_2003}. 
+
 % Geschäftsabteilung zu etwas anderen unbenennen.
-In der strengsten Umsetzung von Domain Driven Design, besteht folglich ein Team aus Fachexperten, sowie Softwareentwicklern und besitzt einen engen Kontakt zu Usern. Nun handelt es sich bei Domain Driven Design jedoch um eine Ansatz, welcher nicht immer absolut umgesetzt wird.
+In der strengsten Umsetzung von Domain Driven Design, besteht folglich ein Team aus Fachexperten, sowie Softwareentwicklern und besitzt einen engen Kontakt zu Usern \parencites[vgl.][Kap. 4.3]{wolff_microservices_2018}.
+
+Nun handelt es sich bei Domain Driven Design jedoch um eine Ansatz, welcher nicht immer absolut umgesetzt wird.
 
 Die Umsetzung des Domain Driven Design hat wiederum einige Vorteile. So wird durch das abgrenzen in einzelne Kontexte, die Autonomität des Teams weiter bestärkt und der Austausch zwischen Fachexperten und Softwareentwicklern durch die einheitliche Sprache verstärkt. Dadurch entstehen eigenständige Services, die hinsichtlich ihrer verwendeten Daten, als auch der verwendeten Terminologie, entkoppelt sind. Eingeteilt wird anhand von Geschäftsprozessen.
