Literaturnachweis fuer Abschnitt Start-up wurde hinzugefuegt

--- a/sections/Theory/microservices.tex
+++ b/sections/Theory/microservices.tex
@@ -26,6 +26,7 @@ Für ein Microservicesarchtektur ist jedoch das Bestreben klare Abgrenzung zu er
 
 \subsubsection{Das Gesetz von Conway}
 \label{sec:conway}
+%Literaturnachweise müssen noch eingefügt werden
 
 Wenn es um die Teamaufteilung in IT Projekten geht, wird in den meisten Fällen sich an die historischen Herangehensweise orientiert und die Entwickler hinsichtlich ihrer Spezifikation eingeteilt. So werden Datenbankexperten, Frontend- und Backendentwicklern in jeweils einzelne Teams aufgegliedert.
 
