Literaturnachweise eingefuegt und gitignore erstellt, um Korrekturdateien zu ignorieren.

--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,8 @@
 
 \input{sections/Theory}
 
-\section{Methodik}
+\input{sections/Methodik}
+
 \section{Auswertung der Interviews und Anwendung auf PluraPolit}
 \begin{itemize}
 	\item Public subscribe pattern
