--- a/references.bib
+++ b/references.bib
@@ -631,3 +631,25 @@ Section: Entrepreneurs},
 	author = {Mullins, John and Komisar, Randy},
 	date = {2009-09-08}
 }
+
+@online{graphql_docs,
+	title = {{GraphQL}: A query language for {APIs}.},
+	url = {http://graphql.org/},
+	shorttitle = {{GraphQL}},
+	abstract = {{GraphQL} provides a complete description of the data in your {API}, gives clients the power to ask for exactly what they need and nothing more, makes it easier to evolve {APIs} over time, and enables powerful developer tools.},
+	urldate = {2020-06-15},
+	langid = {english},
+	note = {Library Catalog: graphql.org},
+	file = {Snapshot:/Users/eddie/Zotero/storage/CJV2RKS4/graphql.org.html:text/html}
+}
+
+@online{grpc_docs,
+	title = {{gRPC}},
+	url = {https://grpc.io/},
+	abstract = {A high-performance, open source universal {RPC} framework},
+	titleaddon = {{gRPC}},
+	urldate = {2020-06-15},
+	langid = {english},
+	note = {Library Catalog: grpc.io},
+	file = {Snapshot:/Users/eddie/Zotero/storage/53GSXFS5/grpc.io.html:text/html}
+}
