Jedes Kapitel Beginnt auf einer neuen Seite

--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,11 @@
 
 \input{sections/Theory}
 
+\newpage
+
 \input{sections/Methodik}
+
+\newpage
 
 \section{Auswertung der Interviews und Anwendung auf PluraPolit}
 \begin{itemize}
