Eigene Datei fuer die Auswertung

--- a/main.tex
+++ b/main.tex
@@ -71,13 +71,9 @@
 
 \newpage
 
-\section{Auswertung der Interviews und Anwendung auf PluraPolit}
-\begin{itemize}
-	\item Public subscribe pattern
-	\item SOA 
-\end{itemize}
+\input{sections/Auswertung}
 
-Da die Implementierung einer Microservicearchitektur, serviceübergreifende Veränderungen erschwert und diese nur durch hohen Aufwand erreicht werden kann, sollte gewährleistet sein, dass kaum Änderungen dieser Art auftreten. Für die Einteilung der Services bedeutet dies, dass Kontextgrenzen so gesetzt werden, dass Veränderungen, die mehrere Services umfassen, ausgeschlossen sind. Wie Abschnitt … zeigt, orientieren sich diese Grenzen an den Geschäftsprozessen, sodass folglich eine Stabilität des Geschäftsabschlaufs Grundlage für eine statische Einteilung der Services ist.
+\newpage
 
 \section{Fazit}
 
