Verweise auf andere Abschnitt wurde in dem Text fur Methodik eingefuegt

--- a/sections/Auswertung.tex
+++ b/sections/Auswertung.tex
@@ -1,4 +1,5 @@
 \section{Auswertung der Interviews und Anwendung auf PluraPolit}
+\label{sec:auswertung}
 
 \begin{itemize}
 	\item Public subscribe pattern
