--- a/sections/Methodik.tex
+++ b/sections/Methodik.tex
@@ -1,7 +1,7 @@
 \section{Methodik}
 \label{sec:methodik}
 
-Um herauszufinden, ob die Bedingungen aus der Literaturrecherche notwendig sind, bevor PluraPolit ihre Software Architektur ändern kann, wurde eine Experteninterview durchgeführt. Es wurde sich für diese Methode entschieden, um in Ermangelung der wenigen Literatur eine qualitative Einschätzung zu bekommen und abschließend eine Empfehlung für PluraPolit zu geben. Weiterführend wurde sich für ein semistrukturiertes Interview entschieden, um zum einen subjektive, als auch vergleichbare Erkenntnisse zu erhalten. Anschließend werden die Erkenntnisse in Abschnitt … diskutiert.
+Um herauszufinden, ob die Bedingungen aus der Literaturrecherche (\cref{sec:bedingungen}) notwendig sind, bevor PluraPolit ihre Software Architektur ändern kann, wurde eine Experteninterview durchgeführt. Es wurde sich für diese Methode entschieden, um in Ermangelung der wenigen Literatur eine qualitative Einschätzung zu bekommen und abschließend eine Empfehlung für PluraPolit zu geben. Weiterführend wurde sich für ein semistrukturiertes Interview entschieden, um zum einen subjektive, als auch vergleichbare Erkenntnisse zu erhalten. Anschließend werden die Erkenntnisse in \cref{sec:auswertung} diskutiert.
 
 \input{sections/Methodik/interviewfragen}
 
