Beispiele wurden in den Abschnitt Methodik eingefuegt

--- a/sections/Methodik/durchfuehrung.tex
+++ b/sections/Methodik/durchfuehrung.tex
@@ -1,1 +1,17 @@
-\subsection{Erstellung der Interviewfragen}
+\subsection{Durchführung des Interviews}
+
+Zeit und Ort
+Beschreibung der Interviews
+
+Einschlusskriterien: Welche Daten du in die Untersuchung einbeziehst.
+Ausschlusskriterien: Welche Daten du nicht in deine Untersuchung aufgenommen hast.
+
+
+Beispiel: 
+Die Absicht war, eine Umfrage unter 350 Kunden der Firma X durchzuführen. Dafür sollten vor Ort in der Firma in Berlin vom 4. bis zum 8. Juli 2017 zwischen 11:00 und 15:00 Uhr die Fragebogen verteilt werden. Die Kunden hatten fünf Minuten Zeit, um den Fragebogen auszufüllen, und konnten sich dafür gemeinsam an einen Tisch setzen, an dem es nicht möglich war, die Antworten der anderen Teilnehmer einzusehen. Der Fragebogen wurde insgesamt von 408 Kunden beantwortet. Da nicht alle Fragebogen vollständig ausgefüllt waren, konnten nur 371 Ergebnisse in die Analyse einbezogen werden.
+
+Um detailliertere Einsicht in die Möglichkeiten zur Verbesserung der Produktpalette zu gewinnen, sollten semi-strukturierte Interviews mit zehn Stammkunden aus der Hauptzielgruppe von Firma X geführt werden. Jedoch stellte sich im Laufe der Forschung heraus, dass bereits nach acht Interviews zufriedenstellende Ergebnisse erzielt waren. Daher wurden im Anschluss keine weiteren Interviews geführt.
+
+Die Interviews wurden dann geführt, wenn die Fragebogen gezeigt haben, dass ein Kunde zu der Zielgruppe gehörte und mehr als zweimal die Woche Produkte der Firma X kaufte. Sie fanden in einem kleinen Büro in der Nähe der Kasse statt, wo zusätzlich zum Interviewer und Befragten auch ein Angestellter der Firma X anwesend war, der dort seiner Arbeit nachging. Aus diesem Grund ist es möglich, dass manche der Befragten sozial erwünschte Antworten gaben. Darauf wird näher eingegangen, wenn die Validität und die Reliabilität der Forschung erörtert werden.
+
+Während der Interviews wurden Notizen gemacht, um die Antworten zu erfassen. Sieben Interviews wurden zusätzlich mit Einverständnis der Befragten gefilmt, um die Interviews zu beschreiben und zu transkribieren. Ein Befragter zog es vor, nicht gefilmt oder aufgenommen zu werden, sodass dieses Interview nur mithilfe von Notizen nachvollzogen werden kann.
