Korrektur von Anne R. zur Einleitung

--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -1,12 +1,14 @@
 \section{Einleitung}
 
-Für ein junges Unternehmen, im Bereich der digitalen Produktentwicklung, ist es wichtig, schnell Ideen umzusetzen und erstes Feedback zu erhalten. Dies helft bei der Bestätigung von Annahmen und bei der Beschaffung von Investoren.
+Für ein junges Unternehmen im Bereich der digitalen Produktentwicklung ist es wichtig, Ideen schnell umzusetzen und ein erstes Feedback zu erhalten. Dies hilft bei der Bestätigung von Annahmen und bei der Gewinnung von Investoren.
 
-Diese schnelle Softwareentwicklung führt jedoch zu einigen Abstrichen hinsichtlich der Qualität. So wird zu Beginn oftmals auf einen automatischen Prozess zur Bereitstellung der Applikation verzichtet und leicht umsetzbare Lösungen vor langfristigen bevorzugt. Auch hinsichtlich der Auswahl der Architektur wird anfängliche Performance als oberstes Auswahlkriterium bestimmt. Endet der Weg für ein Start-up nicht nach wenigen Monaten, dann müssen die ursprünglichen Entscheidungen hinterfragt werden.
+Diese schnelle Softwareentwicklung führt jedoch zu einigen Abstrichen hinsichtlich der Qualität. So wird zu Beginn oftmals auf einen automatischen Prozess zur Bereitstellung der Applikation verzichtet und leicht umsetzbare Lösungen werden vor langfristigen bevorzugt. Auch hinsichtlich der Auswahl der Architektur wird anfängliche Performance als oberstes Auswahlkriterium bestimmt. Endet der Weg für ein Start-up nicht nach wenigen Monaten, dann müssen die ursprünglichen Entscheidungen hinterfragt werden.
 
-Genau an diesem Punkt ist das junge Unternehmen PluraPolit, welches sich erst Mitte letzten Jahres gegründet hat und innerhalb von wenigen Monaten ein fertiges Produkt entwickelte. PluraPolit hat sich zur Aufgabe gestellt eine Bildungsplattform für Jung- und Erstwähler zu Entwicklern und bei der Meinungsbildung zu unterstützen. Gefördert wird das Projekt von der Zentrale für politische Bildung und ist politisch unabhängig. Des Weiteren handelt es sich bei PluraPolit um ein gemeinnütziges Unternehmen, welches keine Absicht verfolgt, Gewinne auszuzahlen. Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es seitdem als Frontendentwickler. Gemeinsam mit einem der drei Gründer sind wir zu zweit die technische Abteilung des Unternehmens und kümmern uns um die Weiterentwicklung der Plattform.
+Genau an diesem Punkt befindet sich das junge Unternehmen PluraPolit, das Mitte letzten Jahres gegründet wurde und innerhalb von wenigen Monaten ein fertiges Produkt entwickelte. PluraPolit hat sich zur Aufgabe gestellt, eine Bildungsplattform für Jung- und Erstwähler zu entwickeln und sie bei der Meinungsbildung zu unterstützen. Gefördert wird das Projekt von der Zentrale für politische Bildung und ist politisch unabhängig. Als gemeinnütziges Unternehmen verfolgt PluraPolit nicht die Absicht, Gewinne zu erzielen.
 
-Die Inhalte der Plattform werden von den zwei anderen Gründern gepflegt und eingeholt. Es handelt sich dabei um neun verschiedene Tonaufnahmen zu einer Frage. Die Audioaufzeichnung kommen ausschließlich von Politikern und beziehen sich auf eine aktuelle politische Fragestellung. So gibt es zum Beispiel das Thema: Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden? Die jeweiligen Politikerinnen und Politiker werden direkt zu einem Statement angefragt, welches anschließend ohne inhaltliche Veränderung auf die Webseite geladen wird. Angefragt werden immer alle Parteien, die im Bundestag vertreten sind. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen gleichermaßen Themen auf die Plattform, die von den jeweiligen Expertinnen und Experten beantwortet werden. So gibt es bei der oben genannten Fragestellung auch eine Äußerung des Vertreters der Landesrundfunkanstalten ARD. Im Gegensatz zu anderen Anbieter für Nachrichten rund um Politik, stellt PluraPolit ausschließlich Sprachnachrichten auf die Plattform, die von jeweiligen Expertinnen und Experten kommen. Es wurde sich exklusiv für das Medium Tonaufnahme entscheiden, um eine junge Zielgruppe anzusprechen und die einzelnen Beiträge wie einen Podcast hören zu können.
+Ich bin seit Anfang Januar an diesem Projekt beteiligt und begleite es als Frontend-Entwickler. Gemeinsam mit einem der drei Gründer bilden wir zu zweit die technische Abteilung des Unternehmens und sind für die Weiterentwicklung der Plattform zuständig. Die Inhalte der Plattform werden von den zwei anderen Gründern eingepflegt. Im Mittelpunkt stehen aktuelle politische Fragestellungen wie zum Beispiel: \textit{\enquote{Sollte der öffentlich-rechtliche Rundfunk abgeschafft werden?}} Hierzu werden Statements von Politikerinnen und Politikern aller Parteien, die im Bundestag vertreten sind, eingeholt und als Audioaufzeichnungen ohne inhaltliche Veränderung auf die Webseite geladen. Neben Fragen, die ausschließlich von Politikern diskutiert werden, kommen auch Themen auf die Plattform, die von den dafür ausgewiesenen Expertinnen und Experten beantwortet werden. So gibt es z.B. bei der oben genannten Fragestellung auch eine Stellungnahme des Vertreters der Landesrundfunkanstalten ARD. 
+
+Im Gegensatz zu anderen Anbietern von Nachrichten rund um Politik, stellt PluraPolit ausschließlich Sprachnachrichten auf die Plattform. Die Entscheidung für das Medium Tonaufnahme wurde bewusst getroffen, um eine junge Zielgruppe anzusprechen und die einzelnen Beiträge wie einen Podcast hören zu können.
 
 \subsection{Problemstellung}
 
